--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "snyk-demo",
+  "name": "snyk-vuln-demo",
   "version": "1.0.0",
-  "description": "Simple Node.js app to test Snyk",
+  "description": "Simple vulnerable Node.js app for Snyk demo",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "lodash": "^4.17.20"
+    "lodash": "4.17.15",
+    "debug": "2.6.8"
   }
 }
